syntax = "proto3";

import "google/protobuf/empty.proto";

package sorock_monitor;

message Shard {
  uint32 id = 1;
}

message Membership {
  repeated string members = 1;
}

message LogMetrics {
  uint64 head_index = 1;
  uint64 snap_index = 2;
  uint64 app_index = 3;
  uint64 commit_index = 4;
  uint64 last_index = 5;
}

service Monitor {
  rpc GetMembership(Shard) returns (Membership) {}
  rpc GetLogMetrics(Shard) returns (stream LogMetrics) {}
}